<resources>
    <string name="app_name">环泰智慧社区</string>
    <string name="app_name_with_space">  环泰智慧社区  </string>
    <string name="type_video">视频</string>
    <string name="type_audio">音乐</string>
    <string name="type_pic">图片</string>
    <string name="type_document">文档</string>
    <string name="type_app">应用</string>
    <string name="type_other">其它</string>
    <string name="type_bt">BT种子</string>
    <string name="my_netdisk_net_error">环泰智慧社区连接失败，无法显示内容</string>
    <string name="folder_empty">"这里是空的哦…快点上传文件吧~"</string>
    <string name="category_netdisk">我的环泰智慧社区</string>
    <string name="bind_alert_ok">确定</string>
    <string name="settings">设置</string>
    <string name="settings_summary_total_netdisk">正在读取…</string>
    <string name="settings_summary_get_netdisk_error">读取失败</string>
    <string name="settings_login">环泰智慧社区已登录，欢迎</string>
    <string name="storage_expired">容量过期</string>
    <string name="getting_storage">容量读取中</string>
    <string name="get_storage_failed">容量读取失败</string>
    <string name="server_storage_not_enough">环泰智慧社区容量不足</string>
    <string name="settings_summary_not_login">未登录</string>
    <string name="sd_inval">SD卡已卸载或不存在</string>
    <string name="folder_not_exist">该目录下无文件夹</string>
    <string name="page_error">哎呀！粗问题了。。。</string>
    <string name="zip_folder_empty">该文件夹为空</string>
    <string name="settings_netdisk_storage">容量(%1$s/%2$s)</string>
    <string name="settings_download_default_dir">默认下载位置</string>
    <string name="settings_ablout_netdisk">关于</string>
    <string name="settings_file_list_sort">文件排序方式</string>
    <string name="settings_feedback_netdisk">用户反馈</string>
    <string name="settings_version_num">V%1$s</string>
    <string name="settings_agreement">用户协议</string>
    <string name="baidu_account">百度帐号:</string>
    <string name="ok">确定</string>
    <string name="continuation">继续</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="commit">提交</string>
    <string name="this_folder_is_empty">该文件夹为空</string>
    <string name="unnamed_file">未命名</string>
    <string name="new_folder">新建文件夹</string>
    <string name="new_folder_doing">正在生成新文件夹…</string>
    <string name="sdcard">SD卡</string>
    <string name="phone">手机存储</string>
    <string name="file_position">文件管理</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s%2$s</string>
    <string name="pause">暂停</string>
    <string name="retry">重试</string>
    <string name="my_netdisk_edit_delete">删除</string>
    <string name="menu_item_settings">设置</string>
    <string name="menu_item_order">排序</string>
    <string name="menu_item_search">搜索</string>
    <string name="menu_item_create_folder">新建文件夹</string>
    <string name="menu_item_refresh">刷新</string>
    <string name="download_suffix">.!bn</string>
    <string name="is_deleting">正在删除…</string>
    <string name="is_refreshing">正在刷新…</string>
    <string name="is_refreshing_try_later">正在刷新，请稍后再试</string>
    <string name="is_deleting_try_later">正在删除，请稍后再试</string>
    <string name="transfer_list_empty">你还没有传输记录喔~</string>
    <string name="share_mms">短信分享</string>
    <string name="share_email">邮件分享</string>
    <string name="add_number">输入号码 (使用回车来分割号码)</string>
    <string name="add_email">输入地址 (使用回车来分割地址)</string>
    <string name="file_delete_success">文件已删除</string>
    <string name="file_delete_system_folder_error">"文件已删除
(系统文件夹无法删除)"</string>
    <string name="file_delete_failed">文件删除失败</string>
    <string name="get_file_list_failed">获取文件列表失败</string>
    <string name="file_share_success">分享成功</string>
    <string name="waiting">正在等待…</string>
    <string name="upload_file_all_added">正在为你加密传输</string>
    <string name="upload_file_all_empty">不支持空文件上传</string>
    <string name="upload_file_illegal">该文件不允许上传</string>
    <string name="upload_file_all_large">不支持大于4G文件上传</string>
    <string name="upload_file_part_large">"正在为你加密传输
(不支持大于4G文件上传)"</string>
    <string name="upload_file_part_empty">"正在为你加密传输
(不支持空文件上传)"</string>
    <string name="upload_file_part_large_empty_added">"正在为你加密传输
(不支持空文件和大于4G文件上传)"</string>
    <string name="upload_file_part_large_empty_noadded">不支持空文件和大于4G文件上传</string>
    <string name="upload_file_all_dir">不支持文件夹上传</string>
    <string name="upload_file_part_dir">"正在为你加密传输
(不支持文件夹上传)"</string>
    <string name="upload_file_part_large_dir_added">"正在为你加密传输
(不支持大于4G文件和文件夹上传)"</string>
    <string name="upload_file_part_large_dir_noadded">不支持大于4G文件和文件夹上传</string>
    <string name="upload_file_part_empty_dir_added">"正在为你加密传输
(不支持空文件和文件夹上传)"</string>
    <string name="upload_file_part_empty_dir_noadded">不支持空文件和文件夹上传</string>
    <string name="upload_file_part_large_empty_dir_added">"正在为你加密传输
(不支持空文件,大于4G文件和文件夹上传)"</string>
    <string name="upload_file_part_large_empty_dir_noadded">不支持空文件,大于4G文件和文件夹上传</string>
    <string name="download_folder_not_exist">默认下载目录不存在</string>
    <string name="download_file_overflow">下载文件已超过100个,请重新选择</string>
    <string name="download_file_all_added">正在为你加密传输</string>
    <string name="download_empty_dir">不支持空文件下载</string>
    <string name="statusbar_start_upload_tickerText">环泰智慧社区开始上传</string>
    <string name="statusbar_start_downloading_tickerText">环泰智慧社区开始下载</string>
    <string name="statusbar_title_tickerText">任务已完成，点击查看</string>
    <string name="statusbar_text_transfer_done_not_all_sucess">{0}成功{1}个，失败{2}个</string>
    <string name="statusbar_text_transfer_done_all_success">{0}成功{1}个</string>
    <string name="statusbar_text_transfer_done_all_failed">{0}失败{1}个</string>
    <string name="statusbar_text_transfer_type_upload">上传</string>
    <string name="statusbar_text_transfer_type_download">下载</string>
    <string name="statusbar_title_downloading">环泰智慧社区正在下载</string>
    <string name="statusbar_title_transfering_one">正在{0}1个文件（{1}）</string>
    <string name="statusbar_title_transfering_multi">正在{0}，剩余{1}个文件（{2}）</string>
    <string name="statusbar_text_transfering">当前速度：{0}</string>
    <string name="formatter_rate">{0}/s</string>
    <string name="formatter_percent">{0}%</string>
    <string name="share_alert">分享由环泰智慧社区服务器发出，仅产生较少的网络流量。</string>
    <string name="delete_overflow">删除文件已超100个，请重新选择</string>
    <string name="delete_sysfolder_err">此文件夹无法删除哦</string>
    <string name="share_overflow">分享文件已超100个，请重新选择</string>
    <string name="add_one_repeat_recipients">\"%1$s\"被重复添加</string>
    <string name="add_some_repeat_recipients">%1$s位联系人被重复添加</string>
    <string name="send_sharing">正在发送分享…</string>
    <string name="share_error">分享失败</string>
    <string name="share_error_msg">发送地址为无效地址，请重新输入。</string>
    <string name="storege_sdcard">SD卡存储</string>
    <string name="account_expire_title">帐户已过期</string>
    <string name="account_expire_text">帐户已过期，请重新登录</string>
    <string name="about_title_text">关于我们</string>
    <string name="netdisk">环泰智慧社区</string>
    <string name="type_folder">文件夹</string>
    <string name="network_exception">网络异常</string>
    <string name="network_exception_message">网络连接失败</string>
    <string name="create_folder_network_exception">网络连接失败，创建文件夹失败</string>
    <string name="create_special_folder_failed">该文件夹不允许创建</string>
    <string name="logout_recheck">确定注销</string>
    <string name="logout_tips">确定注销当前帐号？</string>
    <string name="pim_logout_warning">通讯录同步正在进行，注销可能导致同步异常</string>
    <string name="error_file_does_not_exists">文件不存在</string>
    <string name="application_not_available">没有找到可用的程序</string>
    <string name="open_file">正在尝试打开，请稍候…</string>
    <string name="open_file_title">打开文件</string>
    <string name="open_file_error">文件打开失败</string>
    <string name="no_result">无匹配结果</string>
    <string name="loading">正在加载…</string>
    <string name="menu_text_empty_search_history">清空历史记录</string>
    <string name="search_param_error">搜索内容不正确</string>
    <string name="sdcard_unmounted">手机SD卡不可用</string>
    <string name="account_error_toast">环泰智慧社区未登录，请登录后重试。</string>
    <string name="sdcard_not_exist">SD卡不存在</string>
    <string name="update_version_failed_mount_sdcard">升级失败，请尝试插拔sdcard</string>
    <string name="new_version">环泰智慧社区更新啦</string>
    <string name="check_version">检测到新版本%s</string>
    <string name="download_apk">正在下载环泰智慧社区%s版本</string>
    <string name="apk_version_info">环泰智慧社区%s版本</string>
    <string name="update_now">立即更新</string>
    <string name="waitfor_next_version">下次再说</string>
    <string name="download_apk_finish">下载完毕，点击安装</string>
    <string name="apk_download_failed">升级失败</string>
    <string name="aboout_app_version_text">当前版本 %s</string>
    <string name="check_version_text">检查新版本</string>
    <string name="protocol_text">用户协议</string>
    <string name="already_lastet_version">你的环泰智慧社区已是最新版本</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开即可刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在更新列表…</string>
    <string name="create_folder">新建文件夹</string>
    <string name="create_folder_suc">新建文件夹成功</string>
    <string name="create_folder_fail">新建文件夹失败</string>
    <string name="create_folder_select">选定</string>
    <string name="create_folder_exist">该文件夹已存在</string>
    <string name="create_folder_not_valid">包括非法字符</string>
    <string name="create_folder_over_length">超过最大文件名长度</string>
    <string name="create_folder_path_over_length">超过最大路径长度</string>
    <string name="list_loading_label">正在加载中…</string>
    <string name="my_app_data">我的应用数据</string>
    <string name="baidu_album">百度相册</string>
    <string name="more"/>
    <string name="upload">上传</string>
    <string name="select_all">全选</string>
    <string name="deselect_all">取消</string>
    <string name="backup_label_not_yet_upload">未上传(%1$s)</string>
    <string name="type_all">全部</string>
    <string name="go_ahead">继续</string>
    <string name="my_phone">手机</string>
    <string name="yes">是</string>
    <string name="no">取消</string>
    <string name="upload_failed">上传失败(%1$s)</string>
    <string name="uploading">正在上传(%1$s)</string>
    <string name="upload_complete">上传完成(%1$s)</string>
    <string name="download_failed">下载失败(%1$s)</string>
    <string name="downloading">正在下载(%1$s)</string>
    <string name="download_complete">下载完成(%1$s)</string>
    <string name="upload_failed_normal">上传失败</string>
    <string name="upload_complete_normal">上传完成</string>
    <string name="download_failed_normal">下载失败</string>
    <string name="download_complete_normal">下载完成</string>
    <string name="upload_list">上传列表</string>
    <string name="download_list">下载列表</string>
    <string name="selected_file_to_edit">已选定%d个</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="name_digits">0123456789</string>
    <string name="psw_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="getcode">获取验证码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="reset">重置密码</string>
    <string name="add_device">添加设备</string>
    <string name="finished">已完成上述操作</string>
    <string name="next">下一步</string>
    <string name="resetmessage">重新接通电源,然后按一下[KEY 2],看到[RGB LED]亮红色,代表重置成功</string>
    <string name="check_psw">检查Wi-Fi密码是否正确</string>
    <string name="softPsw_hint">请输入Wi-Fi密码</string>
    <string name="choose_wifi_list_title">请选择可用的Wi-Fi网络</string>
    <string name="besure">确定</string>
    <string name="choose_mode_start">选择模组类型:</string>
    <string name="configuration_message">请输入Wi-Fi密码,连接您的智能设备</string>
    <string name="five_wifi">注: 暂不支持5G频道的Wi-Fi网络</string>
    <string name="alias_hint">请输入别名</string>
    <string name="remark_hint">请输入备注</string>
    <string name="set_Alias_Remark">修改别名及备注</string>
</resources>