<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/login_user" />

        <EditText
            android:id="@+id/etName"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/name_digits"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray_light"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnGetCode"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/getcode"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/sms" />

        <EditText
            android:id="@+id/etCode"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/code_hint"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray_light"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/etPsw"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/psw_digits"
            android:ems="6"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray_light"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/cbLaws"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:background="@drawable/checkbox_laws_selector"
            android:button="@null" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset" />

</LinearLayout>