<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/check_psw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/wifi_icon" />

        <EditText
            android:id="@+id/etSSID"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/choose_wifi_list_title"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imgWiFiList"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/right_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/etPsw"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/softPsw_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cbLaws"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/checkbox_laws_selector"
            android:button="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNext"
        style="@style/LinearlayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>