<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llNext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        style="@style/LinearlayoutStyle"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/llNext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/cbSelect"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/checkbox_hook_selector"
            android:button="@null" />

        <TextView
            android:id="@+id/tvSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="10dp"
        android:text="@string/resetmessage" />

    <com.way.tabui.view.GifView
        android:id="@+id/softreset"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:enabled="false" />

</RelativeLayout>