<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/nodevice"
            android:contentDescription="@string/add_device" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/configuration_message" />

        <LinearLayout
            android:id="@+id/llChooseMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_mode_start"
                    android:textColor="@color/text_blue" />

                <TextView
                    android:id="@+id/tvMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/text_blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="-3dp"
                android:background="@color/text_blue" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:src="@drawable/wifi_icon"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etSSID"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/choose_wifi_list_title"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imgWiFiList"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/right_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/login_password"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etPsw"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/softPsw_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cbLaws"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/checkbox_laws_selector"
            android:button="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnNext"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="仅添加智能网关" />
         <Button
            android:id="@+id/btnlC"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="仅添加摄像头设备" />
         <Button
            android:id="@+id/btnAll"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="同时添加两者" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/five_wifi" />
    </RelativeLayout>

</LinearLayout>